# MaxSynth

./: .gitignore  CMakeLists.txt  MaxSynth.jucer  README.md  compile_commands.json
Builds/LinuxMakefile/: Makefile
Components/: ADSRComponent.cpp  FilterComponent.cpp  FilterComponent.h  OscillatorComponent.cpp
Data/: ADSRData.cpp  ADSRData.h
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h  osc.cpp  osc.h
old/LinuxMakefile/pre_build/: juce_LinuxSubprocessHelperBinaryData.cpp
plugin/: CMakeLists.txt  MaxSynth.jucer
plugin/Builds/LinuxMakefile/: Makefile
plugin/Builds/LinuxMakefile/pre_build/: juce_LinuxSubprocessHelperBinaryData.cpp
plugin/Components/: ADSRComponent.cpp  ADSRComponent.h  FilterComponent.cpp  FilterComponent.h  LFOComponent.cpp  LFOComponent.h  OscillatorComponent.cpp  OscillatorComponent.h  ScopeComponent.h
plugin/Data/: ADSRData.h  LFOData.cpp  LFOData.h
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Style.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
